base/k8up/cluster-resources-backup/networkpolicies/egress-cluster-resources-backup.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-cluster-resources-backup
  namespace: k8up
spec:
  selector: k8up.syn.tools/preBackupPod == 'cluster-resources-backup'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        nets:
          - ${HOST_IP}/32
        ports:
          - 6443  # kube api
